; ModuleID = '/home/carl/AnghaBench/citus/src/backend/distributed/transaction/extr_remote_transaction.c_FinishRemoteTransactionSavepointRelease.c'
source_filename = "/home/carl/AnghaBench/citus/src/backend/distributed/transaction/extr_remote_transaction.c_FinishRemoteTransactionSavepointRelease.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32)* @FinishRemoteTransactionSavepointRelease to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @FinishRemoteTransactionSavepointRelease(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  store i32 1, i32* %5, align 4
  %7 = load i32*, i32** %3, align 8
  %8 = call i32* @GetRemoteCommandResult(i32* %7, i32 1)
  store i32* %8, i32** %6, align 8
  %9 = load i32*, i32** %6, align 8
  %10 = call i32 @IsResponseOK(i32* %9)
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %16, label %12

12:                                               ; preds = %2
  %13 = load i32*, i32** %3, align 8
  %14 = load i32*, i32** %6, align 8
  %15 = call i32 @HandleRemoteTransactionResultError(i32* %13, i32* %14, i32 1)
  br label %16

16:                                               ; preds = %12, %2
  %17 = load i32*, i32** %6, align 8
  %18 = call i32 @PQclear(i32* %17)
  %19 = load i32*, i32** %3, align 8
  %20 = call i32 @ForgetResults(i32* %19)
  ret void
}

declare dso_local i32* @GetRemoteCommandResult(i32*, i32) #1

declare dso_local i32 @IsResponseOK(i32*) #1

declare dso_local i32 @HandleRemoteTransactionResultError(i32*, i32*, i32) #1

declare dso_local i32 @PQclear(i32*) #1

declare dso_local i32 @ForgetResults(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
